--- a/src/Notes/Master/2C_2C/MBJ/T2/13_hierarchical_beta_binomial_modeling.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/13_hierarchical_beta_binomial_modeling.html
@@ -228,7 +228,7 @@ Prior for \(p_i\), Stage 2: the hyperpriors:
 \mu, \eta \sim \pi(\mu, \eta)
 \end{align}
 \begin{align}
-\log \eta \sim \text{Logistic(\log n^*, 1)}
+\log \eta \sim \text{Logistic}(\log n^*, 1)
 \end{align}
 
 </li></ul>
