[AAII] T3: refine notes [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -92,6 +92,9 @@
 </li><li>
 <a href="T3/03_estrategias.html">Estrategias para la combinación de clasificadores</a>
 
+</li><li>
+<a href="T3/04_conclusion.html">Conclusión</a>
+
 </li></ol>
 </div>
   
