--- a/src/Notes/Master/2C_2C/MBJ/T2/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/index.html
@@ -54,6 +54,9 @@
 </li><li>
 <a href="05_example_normal.html">Example: parallel experiments in eight schools</a>
 
+</li><li>
+<a href="06_hierarchical_meta_analysis.html">Hierarchical modeling applied to meta-analysis</a>
+
 </li></ol>
 <div id="T2. Modelos Jerarquicos-Appendix"><h2 id="Appendix" class="header"><a href="#T2. Modelos Jerarquicos-Appendix">Appendix</a></h2></div>
 
