--- a/src/Notes/Master/2C_2C/MBJ/T2/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/index.html
@@ -57,6 +57,9 @@
 </li><li>
 <a href="06_hierarchical_meta_analysis.html">Hierarchical modeling applied to meta-analysis</a>
 
+</li><li>
+<a href="07_weakly_informative_priors.html">Weakly Informative Priors</a>
+
 </li></ol>
 <div id="T2. Modelos Jerarquicos-Appendix"><h2 id="Appendix" class="header"><a href="#T2. Modelos Jerarquicos-Appendix">Appendix</a></h2></div>
 
