--- a/src/Notes/Master/2C_2C/AAII/T4/01_introduction.html
+++ b/src/Notes/Master/2C_2C/AAII/T4/01_introduction.html
@@ -1,9 +1,9 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
-    <title>Aprendizaje Automático II</title>
+    <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/custom.css">
+    <title>Introduction</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,81 +31,29 @@
     <hr>
     <div class="content">
 <p>
-<a href="../../index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
-<div id="Aprendizaje Automático II"><h1 id="Aprendizaje Automático II" class="header"><a href="#Aprendizaje Automático II">Aprendizaje Automático II</a></h1></div>
+<div id="Introduction"><h1 id="Introduction" class="header"><a href="#Introduction">Introduction</a></h1></div>
 
 <hr>
 
-<div id="Aprendizaje Automático II-Tema 1. Random Forests"><h2 id="Tema 1. Random Forests" class="header"><a href="#Aprendizaje Automático II-Tema 1. Random Forests">Tema 1. Random Forests</a></h2></div>
+<p>
+In this chapter we address unsupervised learning. In this case one has a set of \(N\) observations \((x_1,x_2, \cdots ,x_N)\) of a random vector \(X\) having joint density \(\text{Pr}(X)\). The goal is to directly infer the properties of this probability density without the help of a supervisor or
+teacher providing correct answers or degree-of-error for each observation. 
+</p>
 
-<ol>
-<li>
-<a href="T1/01_bias_variance_tradeoff.html">Bias/Variance Tradeoff</a>
+<p>
+Principal components, multidimensional scaling, self-organizing maps, and principal curves try to find simpler patterns in complex data. They look for lower-dimensional structures in the data that capture where most of the data points lie. By doing this, they help us understand how variables are related to each other and if they can be thought of as being controlled by a smaller group of underlying factors.
+</p>
 
-</li><li>
-<a href="T1/02_bootstrapping.html">Bootstrapping</a>
+<p>
+Cluster analysis looks for groups or clusters in the data that are like little "bumps" or "peaks" where the data is most concentrated, that is convex regios of the \(X\)-space that contain modes of \(\text{Pr}(X)\). It helps us see if the data can be divided into different types or categories. Mixture modeling aims for the same thing. Association rules try to find simple rules or patterns that describe where the data is most concentrated, especially when dealing with data that has many features and is either present or absent (binary-valued).
+</p>
 
-</li><li>
-<a href="T1/03_bagging.html">Bagging</a>
-
-</li><li>
-<a href="T1/04_random_forests.html">Random Forests</a>
-
-</li></ol>
-<div id="Aprendizaje Automático II-Tema 2. Intensificación (boosting)"><h2 id="Tema 2. Intensificación (boosting)" class="header"><a href="#Aprendizaje Automático II-Tema 2. Intensificación (boosting)">Tema 2. Intensificación (boosting)</a></h2></div>
-
-<ol>
-<li>
-<a href="T2/01_boosting.html">Boosting</a>
-
-</li><li>
-<a href="T2/02_ada_boost.html">Ada Boost</a>
-
-</li><li>
-<a href="T2/03_boosting_trees.html">Boosting Trees</a>
-
-</li><li>
-<a href="T2/04_gradient_boosting.html">Gradient Boosting</a>
-
-</li><li>
-<a href="T2/05_interpretability.html">Interpretability</a>
-
-</li><li>
-<a href="T2/06_examples.html">Examples</a>
-
-</li><li>
-<a href="T2/07_practice.html">Practice</a>
-
-</li></ol>
- 
-<div id="Aprendizaje Automático II-Tema 3. Otras Combinaciones de Modelos"><h2 id="Tema 3. Otras Combinaciones de Modelos" class="header"><a href="#Aprendizaje Automático II-Tema 3. Otras Combinaciones de Modelos">Tema 3. Otras Combinaciones de Modelos</a></h2></div>
-
-<ol>
-<li>
-<a href="T3/01_introduccion.html">Introducción</a>
-
-</li><li>
-<a href="T3/02_marco_general.html">Marco general para la combinación de clasificadores</a>
-
-</li><li>
-<a href="T3/03_estrategias.html">Estrategias para la combinación de clasificadores</a>
-
-</li><li>
-<a href="T3/04_conclusion.html">Conclusión</a>
-
-</li></ol>
-<div id="Aprendizaje Automático II-Tema 4. Aprendizaje No Supervisado"><h2 id="Tema 4. Aprendizaje No Supervisado" class="header"><a href="#Aprendizaje Automático II-Tema 4. Aprendizaje No Supervisado">Tema 4. Aprendizaje No Supervisado</a></h2></div>
-
-<ol>
-<li>
-<a href="T4/01_introduction.html">Introducción</a>
-
-</li><li>
-<a href="T4/02_cluster_analysis.html">Cluster Analysis</a>
-
-</li></ol>
+<p>
+In unsupervised learning, where we don't have clear outcomes to compare against. We often have to rely on guesswork and intuition to decide if the results make sense or not. This uncertainty has led to many different methods being proposed, but ultimately, it's hard to know for sure which one is the best since there's no straightforward way to check their effectiveness.
+</p>
 </div>
   
 
